--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -9,30 +9,50 @@ html{
 }
 }
 
-.user-bubble {
-  position: relative;
+
+.right, .left{
+  border-radius: 0.35rem;
+  border-top-right-radius: 0;
+}
+.left{
+  border-radius: 0.35rem;
+  border-top-left-radius: 0;
 }
 
-.user-bubble::after {
-  content: "";
+.right::after{
+  content: " ";
+  width: 0.5rem;
+  height: 0.5rem;
   position: absolute;
-  right: -10px; /* Adjust to move the arrow closer */
-  top: 10px;
-  border-width: 0 20px 20px 10px; /* Adjusted for steeper slope */
-  border-style: solid;
-  border-color: transparent #007bff transparent transparent;
+  top:0;
+  right: -8px;
+  background: linear-gradient(135deg, #0D6EFD 0%,#0D6EFD 50%, transparent 50%, transparent);
 }
-
-.stranger-bubble {
-  position: relative;
-}
-
-.stranger-bubble::before {
-  content: "";
+.left::before{
+  content: " ";
+  width: 0.5rem;
+  height: 0.5rem;
   position: absolute;
-  left: -12px; /* Adjust to move the arrow closer */
-  top: 10px;
-  border-width: 20px 20px 0 0; /* Adjusted for steeper slope */
-  border-style: solid;
-  border-color: #e0e0e0 transparent transparent transparent;
+  top:0;
+  left: -8px;
+  border-bottom-left-radius: 15px;
+  background: linear-gradient(225deg, #6C757D 0%,#6C757D 50%, transparent 50%, transparent);
+}
+
+@media screen and (max-width : 720px) {
+  .mobile-relative{
+    position: relative;
+    height: 45vh;
+  }
+  .mobile-absolute{
+    position: absolute;
+    width: 25%;
+    height: 20%;
+    bottom: -0.5rem;
+    right: 0.5rem;
+  }
+  .chat-container{
+    width: 100%;
+    height: 45vh;
+  }
 }
